# setr_a2

./: CMakeLists.txt  README.md  UART.c  UART.h  co2_levels.c  common_funcs.c  common_funcs.h  humidities.c  humidity.h  main.c  smart_sensor.c  smart_sensor.h  temperatures.c
docs/: CMakeLists.txt
src/: main.c
src/UART/: CMakeLists.txt  UART.c  UART.h  uart_common.h  uart_in.c  uart_in.h  uart_out.c  uart_out.h
src/sensors/: CMakeLists.txt  co2_levels.c  co2_levels.h  co2levels.h  common_funcs.c  common_funcs.h  humidity.c  humidity.h  smart_sensor.c  smart_sensor.h  temperature.c  temperature.h  temperatures.c
src/tests/: tests.c
test/: testes.c
tests/: CMakeLists.txt  run_tests.c  sensors_tests.c  testes.c  total_tests.c  uart_tests.c
unity_src/: CMakeLists.txt
